--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,8 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --collectCoverage --"
   },
   "engines": {
     "node": "16"
