change serve scripts

--- a/kontan-server/package.json
+++ b/kontan-server/package.json
@@ -10,8 +10,8 @@
     "build:dev": "NODE_ENV=development nest build --path tsconfig.build.development.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "NODE_ENV=development nest start --watch",
-    "serve:dev": "NODE_ENV=development node dev/src/main",
-    "serve:prod": "NODE_ENV=production node dist/src/main",
+    "serve:dev": "NODE_ENV=development node dev/main",
+    "serve:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
