--- a/kontan-server/package.json
+++ b/kontan-server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.3.12",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.2.0",
     "@slack/web-api": "^6.8.1",
     "firebase-admin": "^11.5.0",
     "pigeon-mqtt-nest": "^1.0.13",
@@ -34,6 +35,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
