--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./functions
+        working-directory: ./kontan-server
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +24,6 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
-        cache-dependency-path: './functions/package-lock.json'
+        cache-dependency-path: './kontan-server/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
