--- a/kontan-server/package.json
+++ b/kontan-server/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "NODE_ENV=production nest build",
-    "build:dev": "NODE_ENV=development nest build --path tsconfig.build.development.json",
+    "build": "cross-env NODE_ENV=production nest build",
+    "build:dev": "cross-env NODE_ENV=development nest build --path tsconfig.build.development.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=development nest start --watch",
-    "serve:dev": "NODE_ENV=development node dev/main",
-    "serve:prod": "NODE_ENV=production node dist/main",
+    "start": "cross-env NODE_ENV=development nest start --watch",
+    "serve:dev": "cross-env NODE_ENV=development node dev/main",
+    "serve:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -42,6 +42,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
