--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Create new virtual env and activate it
         run: |
           cd kontan-server/
-          npm run install
+          npm install
           npm run build
   deploy:
     runs-on: self-hosted
