fix: only one step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,25 +4,16 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-install:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-
       # Setup virtual env, install dependencies
       - name: Create new virtual env and activate it
         working-directory: /home/kontan/kontan-server
         run: |
           npm install
           npm run build
-  deploy:
-    runs-on: self-hosted
-    needs: build
-
-    steps:
-      # Kill gunicorn server, if running already
-      - name: Restart services
-        run: |
           sudo killall node
           sudo killall ngrok
           sudo supervisorctl restart kontan:*
