--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,18 @@ on:
   push:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: '~/kontan/kontan-server/'
+
+
 jobs:
   build-and-install:
     runs-on: self-hosted
-    working-directory: /home/kontan/kontan-server
     steps:
       - uses: actions/checkout@v3
+        with:
+          path: ~/kontan
       # Setup virtual env, install dependencies
       - name: Create new virtual env and activate it
         run: |
@@ -17,6 +23,8 @@ jobs:
 
       - name: Restart and run
         run: |
-          sudo killall ngrok
+          echo "sudo killall ngrok" > startProd.tunnel.sh
+          echo "ngrok http --config=$HOME/.config/ngrok/ngrok.yml --subdomain=kontan localhost:3000 --log=stdout > /var/log/ngrok.prod.log &" >> startProd.tunnel.sh
           sudo killall node
+          sudo killall ngrok
           sudo supervisorctl restart kontan:*
